@@ -1,5 +1,6 @@
 2022-04-10:
   - Fix handling of singular initial covariance matrices in PQLMQL_innerFit
+  - Issue a warning if models with random effects are compared using anova
 
 2022-01-16:
   - Fix prediction with complicated terms in the model
